crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__alpha_yoke_all_36_buttons_hat_se.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
assertion_line: 72
expression: state
---
AlphaInputState {
    axes: AlphaAxes {
        roll: 0.0,
        pitch: 0.0,
    },
    buttons: AlphaButtons {
        mask: 68719476735,
        hat: 4,
    },
}
