crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__alpha_yoke_full_left_with_magneto_both.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
assertion_line: 64
expression: state
---
AlphaInputState {
    axes: AlphaAxes {
        roll: -1.0,
        pitch: 0.0,
    },
    buttons: AlphaButtons {
        mask: 50331649,
        hat: 1,
    },
}
