crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__alpha_yoke_full_right_roll.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
expression: state
---
AlphaInputState {
    axes: AlphaAxes {
        roll: 0.9995117,
        pitch: 0.0,
    },
    buttons: AlphaButtons {
        mask: 0,
        hat: 0,
    },
}
