crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__alpha_yoke_neutral.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
assertion_line: 54
expression: state
---
AlphaInputState {
    axes: AlphaAxes {
        roll: 0.0,
        pitch: 0.0,
    },
    buttons: AlphaButtons {
        mask: 0,
        hat: 0,
    },
}
