crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__bravo_throttle_ap_panel_active.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
assertion_line: 97
expression: state
---
BravoInputState {
    axes: BravoAxes {
        throttle1: 0.50012213,
        throttle2: 0.50012213,
        throttle3: 0.0,
        throttle4: 0.0,
        throttle5: 0.0,
        flap_lever: 0.0,
        spoiler: 0.0,
    },
    buttons: BravoButtons {
        mask: 255,
    },
}
