crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__bravo_throttle_full_with_gear_up.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
assertion_line: 87
expression: state
---
BravoInputState {
    axes: BravoAxes {
        throttle1: 1.0,
        throttle2: 1.0,
        throttle3: 1.0,
        throttle4: 1.0,
        throttle5: 1.0,
        flap_lever: 1.0,
        spoiler: 1.0,
    },
    buttons: BravoButtons {
        mask: 1073741824,
    },
}
