crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__button_delta_gear_transition.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
assertion_line: 131
expression: delta
---
ButtonDelta {
    pressed: 2147483648,
    released: 1073741824,
}
