crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__led_all_off.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
assertion_line: 106
expression: report
---
[
    0,
    0,
    0,
    0,
    0,
]
