crates/flight-hotas-honeycomb/tests/snapshots/snapshot_tests__led_all_on.snap
---
source: crates/flight-hotas-honeycomb/tests/snapshot_tests.rs
assertion_line: 113
expression: report
---
[
    0,
    255,
    255,
    255,
    15,
]
